PurchaseControllerTest, minor changes and code cleanup